skins/larry/styles.css
/* ... */
#messagestack div:after {
	content: "";
	position: absolute;
	display: block;
	top: 0;
	left: 4px;
	width: 20px;
	height: 24px;
	background: url(images/messages_dark.png) 0 7px no-repeat;
}

#messagestack div.error {
	color: #ff615d;
}

#messagestack div.error:after {
	background-position: 0 -55px;
}

#messagestack div.warning {
	color: #f4bf0e;
}

#messagestack div.warning:after {
	background-position: 0 -84px;
}

#messagestack div.confirmation {
	color: #00e05a;
}

#messagestack div.confirmation:after {
	background-position: 0 -25px;
}

#messagestack div.uploading,
#messagestack div.loading {
	color: #ddd;
}

#messagestack div.uploading:after,
#messagestack div.loading:after {
	top: 4px;
	left: 6px;
	background: url(images/ajaxloader_dark.gif) 0 4px no-repeat;
}

#messagestack div.voice {
	position: absolute;
	top: -1000px;
}

#messagestack div a {
	color: #94c0da;
}

#messagestack div a:hover {
	text-decoration: underline;
	cursor: pointer;
}

.ui-dialog.error .ui-dialog-title,
.ui-dialog.warning .ui-dialog-title,
.ui-dialog.confirmation .ui-dialog-title {
	padding-left: 25px;
	background: url(images/messages.png) 0 5px no-repeat;
	text-shadow: 0 1px 1px #fff;
}

.ui-dialog.warning .ui-dialog-title {
	color: #960;
	background-position: 0 -90px;
}

.ui-dialog.error .ui-dialog-title {
	color: #cf2734;
	background-position: 0 -60px;
}

.ui-dialog.confirmation .ui-dialog-title {
	color: #093;
	background-position: 0 -30px;
}

.ui-autocomplete {
	max-height: 160px;
	overflow-x: hidden;
	overflow-y: auto;
}


/*** basic page layout ***/

#header {
	overflow-x: hidden; /* Chrome bug #1488851 */
}

#topline {
	height: 18px;
	background: url(images/linen_header.jpg) repeat #666;
	border-bottom: 1px solid #4f4f4f;
	padding: 2px 0 2px 10px;
	color: #aaa;
	text-align: center;
}

#topnav {
	position: relative;
	height: 46px;
	margin-bottom: 10px;
	padding: 0 0 0 10px;
	background: #111;
	background: -moz-linear-gradient(top, #404040 0%, #060606 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#404040), color-stop(100%,#060606));
	background: -ms-linear-gradient(top, #404040 0%, #060606 100%);
	background: linear-gradient(to bottom, #404040 0%, #060606 100%);
}

#topline a,
#topnav a {
	color: #eee;
	text-decoration: none;
}

#topline a:hover {
	text-decoration: underline;
}

#toplogo {
	padding-top: 2px;
	cursor: pointer;
	border: none;
}

.topleft {
	float: left;
}

.topright {
	float: right;
}

.closelink {
	display: inline-block;
	padding: 2px 10px 2px 20px;
}

#topline span.username {
	padding-right: 1em;
}

#topline .topleft a {
	display: inline-block;
	padding: 2px 0.8em 0 0;
	color: #aaa;
}

#topline a.button-logout {
	display: inline-block;
	padding: 2px 10px 2px 20px;
	background: url(images/buttons.png) -6px -193px no-repeat;
	color: #fff;
}

#taskbar .button-logout {
	display: none;
}

#taskbar a.button-logout span.button-inner {
	background-position: -2px -1791px;
}

#taskbar a.button-logout:hover span.button-inner {
	background-position: -2px -1829px;
}


/*** minimal version of the page header ***/

.minimal #topline {
	position: fixed;
	top: -18px;
	background: #444;
	z-index: 5000;
	width: 100%;
	height: 22px;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
}

.minimal #topline:hover {
	top: 0px;
	opacity: 0.94;
	-webkit-transition: top 0.3s ease-in-out;
	-moz-transition: top 0.3s ease-in-out;
	transition: top 0.3s ease-in-out;
}

.extwin #topline,
.extwin #topline:hover {
	position: static;
	top: 0px;
	height: 18px;
	width: auto;
	-moz-box-sizing: content-box;
	box-sizing: content-box;
	opacity: 0.999;
}

.minimal #topline a.button-logout {
	display: none;
}

.minimal #topline span.username {
	display: inline-block;
	padding-top: 2px;
}

.minimal #topnav {
	position: relative;
	top: 4px;
	height: 42px;
}

.minimal #taskbar a {
	position: relative;
	padding: 10px 10px 0 6px;
	height: 32px;
}

.minimal #taskbar .button-logout {
	display: inline-block;
}

.minimal #taskbar .button-inner {
	top: -4px;
	padding: 0;
	height: 24px !important;
	width: 27px;
	text-indent: -5000px;
}

#taskbar .tooltip {
	display: none;
}

.minimal #taskbar .tooltip {
	position: absolute;
	top: -500px;
	right: 2px;
	display: inline-block;
	padding: 2px 8px 3px 8px;
	background: #444;
	background: -moz-linear-gradient(top, #444 0%, #333 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#444), color-stop(100%,#333));
	background: -ms-linear-gradient(top, #444 0%, #333 100%);
	background: linear-gradient(to bottom, #444 0%, #333 100%);
	color: #eee;
	font-weight: bold;
	white-space: nowrap;
	border: 1px solid #777;
	box-shadow: 0 1px 5px 0 #333;
	z-index: 200;
	white-space: nowrap;
	text-shadow: 0px 1px 1px #000;
}

.minimal #taskbar .tooltip:after {
	content: "";
	position: absolute;
	top: -4px;
	right: 15px;
	border-style: solid;
	border-width: 0 4px 4px;
	border-color: #888 transparent;
	/* reduce the damage in FF3.0 */
	display: block;
	width: 0;
	z-index: 251;
}

.minimal #taskbar a:hover .tooltip {
	display: block;
	top: 39px;
}


/*** taskbar ***/

#taskbar {
	position: relative;
	padding-right: 18px;
}

#taskbar a {
	display: inline-block;
	height: 34px;
	padding: 12px 10px 0 6px;
}

#taskbar a span.button-inner {
	display: inline-block;
	font-size: 110%;
	font-weight: normal;
	text-shadow: 0px 1px 1px black;
	padding: 5px 0 0 34px;
	height: 19px;
	background: url(images/buttons.png) -1000px 0 no-repeat;
}

#taskbar a:focus {
	color: #fff;
	text-shadow: 0px 1px 1px #666;
	background-color: rgba(73,180,210,0.7);
	outline: none;
}

#taskbar a.button-selected {
	color: #3cf;
	background-color: #2c2c2c;
}

#taskbar a.button-mail span.button-inner {
	background-position: 0 2px;
}

#taskbar a.button-mail:hover span.button-inner,
#taskbar a.button-mail.button-selected span.button-inner {
	background-position: 0 -22px;
}

#taskbar a.button-addressbook span.button-inner {
	background-position: 0 -48px;
}
/* ... */

